<resources>
    <string name="app_name">02TafoyaErnestoIDGS911AMA23</string>
    <string name="author_name">Ernesto Daniel Tafoya Molina</string>
    <string name="author_email">200222@utags.edu.mx</string>
    <string name="temp_historial_title">TempHistorial</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <!-- Temperature -->
    <string name="all">TODO</string>
    <string name="temperature">28 °C</string>
    <string name="title_temperature">Temperature</string>
    <string name="tv_temperatura_str">Temp :</string>
    <string name="tv_valor_recibido_str">Temperature Value</string>
    <string name="btn_historial_temp_str">Temperature History</string>

    <!--Humidity-->
    <string name="humidity">68 %</string>
    <string name="title_humidity">Humidity</string>

</resources>