<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_historialtemp"
            android:icon="@drawable/ic_line_chart"
            android:title="@string/temp_historial_title" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_temperature"
            android:icon="@drawable/ic_temperature"
            android:title="@string/title_temperature" />
        <item
            android:id="@+id/nav_humidity"
            android:icon="@drawable/ic_humidity"
            android:title="@string/title_humidity" />
        <item
            android:id="@+id/nav_dispositivos_vincuados_fragment"
            android:icon="@android:drawable/stat_sys_data_bluetooth"
            android:title="Bounded_devices" />
    </group>
</menu>