<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.a02tafoyaernestoidgs911ama23.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.a02tafoyaernestoidgs911ama23.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.a02tafoyaernestoidgs911ama23.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_temperature"
        android:name="temperature.TemperatureFragment"
        android:label="@string/title_temperature"
        tools:layout="@layout/fragment_temperature" />
    <fragment
        android:id="@+id/nav_humidity"
        android:name="com.example.a02tafoyaernestoidgs911ama23.ui.humidity.humidity"
        android:label="@string/title_humidity"
        tools:layout="@layout/fragment_humidity" />
    <fragment
        android:id="@+id/nav_historialtemp"
        android:name="com.example.a02tafoyaernestoidgs911ama23.ui.historialtemperature.hisrotialtemperature_fragment"
        android:label="@string/temp_historial_title"
        tools:layout="@layout/hisrotialtemperature_fragment" />
</navigation>